# csc-system-design

./: .gitignore  CMakeLists.txt  README.md  build  build.sh  build_windows.sh  shell.md
.github/workflows/: main.yml
src/: CMakeLists.txt  command_params.h  executor.cpp  executor.h  main.cpp  preprocessor.cpp  preprocessor.h  read_exec_print.cpp  read_exec_print.h  variables_storage.cpp  variables_storage.h
src/commands/: cat_command.cpp  cat_command.h  command_base.cpp  command_base.h  command_factory.cpp  command_factory.h  command_result.h  echo_command.cpp  echo_command.h  exit_command.cpp  exit_command.h  external_command.cpp  external_command.h  pwd_command.cpp  pwd_command.h  wc_command.cpp  wc_command.h
test/: CMakeLists.txt  executor_test.cpp  preprocessor_test.cpp  variables_storage.test.cpp
test/commands/: cat_command.test.cpp  echo_command.test.cpp  exit_command.test.cpp  external_command.test.cpp  pwd_command.test.cpp  wc_command.test.cpp
